--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/shamatiienko/princip-web/issues"
   },
-  "homepage": "https://github.com/shamatiienko/princip-web#readme",
+  "homepage": "https://github.com/shamatiienko/princip-web",
   "dependencies": {
     "express": "^4.16.2",
     "nodemon": "^1.12.1"
