--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shamatiienko/princip-web",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "nodemon": "^1.12.1"
   }
