--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "bugs": {
     "url": "https://github.com/shamatiienko/princip-web/issues"
   },
+  "engines": {
+    "node": "8.4.0"
+  },
   "homepage": "https://github.com/shamatiienko/princip-web",
   "dependencies": {
-    "ejs": "^2.5.7",
+    "ejs": "^5.3.0",
     "express": "^4.16.2",
     "nodemon": "^1.12.1"
   }
