--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/shamatiienko/princip-web",
   "dependencies": {
-    "ejs": "^5.3.0",
-    "express": "^4.16.2",
-    "nodemon": "^1.12.1"
+    "ejs": "^2.5.7",
+    "express": "^4.16.2"
   }
 }
