--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/shamatiienko/princip-web",
   "dependencies": {
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "nodemon": "^1.12.1"
   }
 }
